--- a/resources/assets/sass/partials/pagelayout.scss
+++ b/resources/assets/sass/partials/pagelayout.scss
@@ -7,7 +7,7 @@ body {
 }
 
 h1.programmalijn {
-	padding: 0 0 2rem 0;
+	// padding: 0 0 2rem 0;
 }
 
 .backheader {
